# hpcourse

hse/BPM161/alyokhina/02.OpenCL/: CMakeLists.txt  cl.hpp  convolution.cl  main.cpp
hse/BPM161/alyokhina/04.LockFree/: cl.hpp
hse/BPM161/alyokhina/04.OpenCl/: CMakeLists.txt  main.cpp  scan.cl
